# plasma-qmlhelloworld

./: .gitignore  CMakeLists.txt  README.md
src/declarative/: CMakeLists.txt  greeter.cpp  greeter.h  main.cpp  qmldir  qmlplugins.cpp  qmlplugins.h
src/plasma/: CMakeLists.txt  metadata.desktop.cmake
src/plasma/contents/config/: config.qml  main.xml
src/plasma/contents/locale/: Messages.sh
src/plasma/contents/ui/: ConfigGeneral.qml  main.qml
